Ambas as threads com os comparativos de tempo e simulação de trabalho